feat: track visualizer 구현

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 :root {
   --text-color: #1a1a1a;
   --disabled-text-color: #bbbbbb;
+  --track-background-color: rgb(51, 51, 51);
 }
 
 * {
@@ -12,7 +13,11 @@
 html,
 body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+main {
+  margin-bottom: 60px;
 }
 
 button {
@@ -34,6 +39,24 @@ button:disabled {
   padding: 16px;
   column-gap: 8px;
 }
+
+#tracks {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 16px;
+}
+
+.track {
+  display: flex;
+  flex-direction: column;
+  padding: 4px 16px;
+  width: max-content;
+  background-color: var(--track-background-color);
+}
+
+/* .play-button {
+} */
 
 .copyright-wrapper {
   display: flex;
