--- a/src/style.css
+++ b/src/style.css
@@ -16,21 +16,16 @@ body {
   min-height: 100vh;
 }
 
+header {
+  display: flex;
+  flex-direction: column;
+}
+
 main {
-  margin-bottom: 60px;
-}
-
-button {
-  border: 1px solid var(--text-color);
-  border-radius: 4px;
-  padding: 4px 8px;
-  color: var(--text-color);
-  cursor: pointer;
-}
-
-button:disabled {
-  border-color: var(--disabled-text-color);
-  color: var(--disabled-text-color);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .buttons {
@@ -40,14 +35,57 @@ button:disabled {
   column-gap: 8px;
 }
 
-#tracks {
+.buttons > button {
+  border: 1px solid var(--text-color);
+  border-radius: 4px;
+  padding: 4px 8px;
+  color: var(--text-color);
+  cursor: pointer;
+}
+
+.buttons > button:disabled {
+  border-color: var(--disabled-text-color);
+  color: var(--disabled-text-color);
+}
+
+.track-select-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  row-gap: 4px;
+  padding: 4px 8px;
+}
+
+.track-select-label {
+  width: 200px;
+}
+
+.track-select {
+  width: 200px;
+}
+
+.track-option {
+  width: 200px;
+}
+
+.player {
   display: flex;
   align-items: center;
   flex-direction: column;
   row-gap: 16px;
 }
 
-.track {
+.player-placeholder {
+  width: 752px;
+  height: 158px;
+  background-color: var(--track-background-color);
+}
+
+.player-placeholder.hidden {
+  display: none;
+}
+
+.player-graph {
   display: flex;
   flex-direction: column;
   padding: 4px 16px;
